Move `AddressResolve` to a separate module, so it's reusable (#8992)